--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "node-fetch": "^2.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
-  "devDependencies": {
-    "typescript": "3.3.3"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
