--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@testing-library/react": "^10.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
